--- a/6-22-一些被忽略的js知识1.md
+++ b/6-22-一些被忽略的js知识1.md
@@ -1,4 +1,5 @@
-# 《你不知道的Javascript》
+《你不知道的Javascript》记录1
+--------
 
 ## 硬绑定不会覆盖硬绑定，但new会覆盖硬绑定
 
@@ -46,6 +47,9 @@ obj2.a  // 10
 
 ## 软绑定
 
+`someMethod.softBind(obj)`
 
+检查调用时的 this ，如果 this 绑定到全局对象或者 undefined ，那就把
+指定的默认对象 obj 绑定到 this ，否则不会修改 this
 
 
