--- a/6-26-一些被忽略的js知识3.md
+++ b/6-26-一些被忽略的js知识3.md
@@ -55,3 +55,23 @@ Bar.ptototype = Object.create( Foo.prototype );
 // ES6 开始可以直接修改现有的 Bar.prototype
 Object.setPrototypeOf( Bar.prototype, Foo.prototype );
 ```
+## setPrototypeOf,getPrototypeOf,isPrototype
+
+```js
+var a={x:1}
+var b={y:2}
+
+Object.setPrototypeOf(a,b)
+a.__proto__===b // true
+Object.getPrototypeOf(a)===a.__proto__ // true
+b.isPrototypeOf(a) // true
+
+/*           null
+*             | prototype
+*            Object 
+*  prototype /
+*           b 
+*            \ prototype 
+*             a
+* */
+```
