--- a/6-26-一些被忽略的js知识3.md
+++ b/6-26-一些被忽略的js知识3.md
@@ -75,3 +75,72 @@ b.isPrototypeOf(a) // true
 *             a
 * */
 ```
+
+## class的prototype
+
+先不用class
+```js
+function A(n){
+  this.id=n
+}
+A.prototype.show=function(){
+  console.log(this.id)
+}
+
+var a=new A(5)
+a.show() // 5
+```
+接着我们改变prototype，分2种形式
+```js
+// 一：更改prototype上的属性
+A.prototype.show=function(){
+  console.log("change")
+}
+a.show() // change 生效
+
+// 二：直接更改整个prototype
+A.prototype={
+  show:function(){
+    console.log("change")
+  }
+}
+a.show() // 5 未生效
+var a2=new A(5)
+a2.show() // change 生效
+```
+
+再看class
+```js
+class A{
+  constructor(n){
+    this.id=n
+  }
+  show(){
+    console.log(this.id)
+  }
+}
+var a=new A(8)
+a.show() // 8
+```
+改变prototype
+```js
+// 一：更改prototype上的属性
+A.prototype.show=function(){
+  console.log("change")
+}
+a.show() // change 生效
+
+// 二：直接更改整个prototype
+A.prototype={
+  show:function(){
+    console.log("change")
+  }
+}
+a.show() // 8 未生效
+var a2=new A(5)
+a2.show() // 5 未生效
+```
+
+结论：
+1. 非class模式下，直接修改整个prototype并不能影响已经创建的实例，但对后来创建的实例有影响
+2. class模式下，直接修改整个prototype既不能影响已经创建实例，也不能影响后来创建的实例
