--- a/编码-加密-哈希-混淆不同点-文章翻译.md
+++ b/编码-加密-哈希-混淆不同点-文章翻译.md
@@ -2,7 +2,7 @@
 
 [原文阅读](https://danielmiessler.com/study/encoding-encryption-hashing-obfuscation/)
 
-![js_obfuscation](https://danielmiessler.com/images/js_obfuscation.png)
+![js_obfuscation](./img/js_obfuscation.png)
 
 [编码](#编码)
 
@@ -17,7 +17,7 @@
 
 ### 编码
  
- ![ascii](https://danielmiessler.com/images/ascii-image.png)
+ ![ascii](./img/ascii-image.png)
 
 编码的目的是将数据转换，使其能被各类不同的系统正确(安全)的解析。例如：email发送的是二进制数据，在web上查看特殊字符。
 它的目的*不是*为了让数据更安全，而是能让数据被正确的解析。
@@ -29,7 +29,7 @@
 
 加密
 
-![ciphertext](https://danielmiessler.com/images/ciphertext.png)
+![ciphertext](./img/ciphertext.png)
 
 加密的目的是转换数据以使其对其他人保密，例如:通过互联网向某人发送一封只有他们才能阅读的秘密信件，或者安全地发送密码。
 比起关注适用和易用性，加密的目的是确保除了预期接收者之外的任何人都不能解读数据。
@@ -43,7 +43,7 @@
 
 ### 散列法(哈希)
 
-![sha512](https://danielmiessler.com/images/sha512.gif)
+![sha512](./img/sha512.gif)
 
 散列法的目的是确保完整性，也就是说，当数据内容发生变化时你可以知道它已被更改。
 从技术上讲，散列对任意输入都会生成固定长度字符串，它符合以下特性：
@@ -62,7 +62,7 @@
 
 ### 混淆
 
-![obfuscated](https://danielmiessler.com/images/obfuscated-e1454498907454.png)
+![obfuscated](./img/obfuscated-e1454498907454.png)
 
 混淆的目的是使某些东西更难理解，通常是为了使攻击或复制更加困难。
 
