--- a/07-16-处理额外复杂任务的3种方式.md
+++ b/07-16-处理额外复杂任务的3种方式.md
@@ -1,18 +1,23 @@
 ## web worker VS idleRequestCallback VS setTimeout
 
-测试平台：FireFox(Chrome嵌套worker会有[bug](https://bugs.chromium.org/p/chromium/issues/detail?id=31666)?)
+***测试平台：FireFox***(Chrome嵌套worker会有[bug](https://bugs.chromium.org/p/chromium/issues/detail?id=31666))
 
 |*方法*             |从0自加至100亿（相同环境）|  
 |-------------------|:--------------:|
 |web worker(10线程) |7s              |
 |web worker(单线程) |29s             |
-|idleRequestCallback|43s             |
-|setTimeout         |62s             |
+|idleRequestCallback|45s             |
+|setTimeout         |61s             |
 
-1. web worker执行不受主线程执行影响
-2. idle执行收到主线程影响,主线程繁忙会暂停(因为没有空闲帧),setTimeout也会受影响
-3. worker可以嵌套，充分发挥多核cpu的性能（个人的电脑数据，worker能让浏览器进程迅速到90%，idle和setTimeout在35%徘徊，最多40%)
-4. idle和setTimeout应该将任务分割成合适的小任务，否则会影响主线程流畅度
+[项目地址](https://github.com/stonehank/handleHugeTask)
+
+一些注意点：
+
+1. web worker执行不受主线程执行影响。
+2. idle执行收到主线程影响,主线程繁忙会暂停(因为没有空闲帧),setTimeout也会受影响。
+3. worker可以嵌套，充分发挥多核cpu的性能（个人的电脑数据，worker能让浏览器进程迅速到90%，idle和setTimeout在35%徘徊，最多40%)。
+4. worker任务结束必须手动关闭，否则线程会一直占用资源。
+5. idle和setTimeout应该将任务分割成合适的小任务，否则单个任务过大会影响主线程流畅度。
 
 -----
 ### web worker开启方式：
@@ -88,6 +93,6 @@ Promise.resolve().then(function(){
 
 一张图理解：
 
-![](./img/eventloop%20and%20callbackqueue.png)
+![](./eventloop%20and%20callbackqueue.png)
 
 因此，使用Promise就不会去等下一次队列的渲染，结束后放到任务队列末尾继续调用
