--- a/06-18两个字符串最小编辑距离算法.md
+++ b/06-18两个字符串最小编辑距离算法.md
@@ -1,8 +1,8 @@
-## 学习Levenshtein Distance 做个笔记
+## 学习Levenshtein Distance算法
 
   两个字符串最小编辑距离
  
-  任意单个字符变动有3种情况，替换，增加和删除
+  任意单个字符变动有3种情况，替换，增加和删除，括号内部表示需要进行移动的步数
 
  * 情况一：
   
@@ -78,4 +78,5 @@ minED(a,b)
   [ 2, 1, 1, 2, 2 ],
   [ 3, 2, 1, 2, 3 ],
   [ 4, 3, 2, 1, 2 ] ]
+// 因此从'abcd'变动到'adbc'，最小移动步数是2
 ```
