--- a/06-26-一些被忽略的js知识3.md
+++ b/06-26-一些被忽略的js知识3.md
@@ -55,7 +55,7 @@ Bar.ptototype = Object.create( Foo.prototype );
 // ES6 开始可以直接修改现有的 Bar.prototype
 Object.setPrototypeOf( Bar.prototype, Foo.prototype );
 ```
-## setPrototypeOf,getPrototypeOf,isPrototype
+## setPrototypeOf,getPrototypeOf,isPrototypeOf
 
 ```js
 var a={x:1}
