--- a/07-16-处理额外复杂任务的3种方式.md
+++ b/07-16-处理额外复杂任务的3种方式.md
@@ -93,6 +93,6 @@ Promise.resolve().then(function(){
 
 一张图理解：
 
-![](./eventloop%20and%20callbackqueue.png)
+![](./img/eventloop%20and%20callbackqueue.png)
 
 因此，使用Promise就不会去等下一次队列的渲染，结束后放到任务队列末尾继续调用
