--- a/06-18两个字符串最小编辑距离算法.md
+++ b/06-18两个字符串最小编辑距离算法.md
@@ -1,10 +1,13 @@
 ## 学习Levenshtein Distance算法
-
-  两个字符串最小编辑距离
  
-  任意单个字符变动有3种情况，替换，增加和删除，括号内部表示需要进行移动的步数
+  任意单个字符变动有3种情况，替换，增加和删除：
 
- * 情况一：
+**1. 如果对应的字符相同，则从它的左，斜或者上方选取最小值，直接填写**
+**2. 如果对应的字符不相同，则从它的左，斜或者上方选取最小值，+1后填写**
+
+括号内部表示需要进行移动的步数
+
+ * 情况一：从ab到ac的变动
   
   x位置 字符不相等(b!==c)，但是 i位置变动最小，所以从i位置的数值加1，斜线说明说替换
 
@@ -14,7 +17,7 @@
   c l(1)  x
   // x=1
   ```
- * 情况二：
+ * 情况二：从acd到ac的变动
  
   x位置 字符不相等(b!==c)，但是 m位置变动最小，所以从m位置的数值加1，横向说明增加
   
@@ -25,7 +28,7 @@
   // x=1
   ```
   
- * 情况三：
+ * 情况三：从ab到abc的变动
  
   x位置 字符不相等(b!==c)，但是 l位置变动最小，所以从l位置的数值加1，竖向说明减少
 
@@ -78,5 +81,5 @@ minED(a,b)
   [ 2, 1, 1, 2, 2 ],
   [ 3, 2, 1, 2, 3 ],
   [ 4, 3, 2, 1, 2 ] ]
-// 因此从'abcd'变动到'adbc'，最小移动步数是2
 ```
+因此从'abcd'变动到'adbc'，最小移动步数是2
