--- a/08-14-CORS通信.md
+++ b/08-14-CORS通信.md
@@ -11,7 +11,7 @@ CORS通信就是服务端设置`Access-Control-Allow-Origin`等配置
     
    `application/x-www-form-urlencoded` 键值对形式 a=1&b=2
     
-    `multipart/form-data` 表单(键值对或者文件)
+    `multipart/form-data` 表单(键值对或者文件)，也就是使用了`new FormData()`再`xhr.send()`的格式
 
     `text/plain`纯文本
 
