--- a/08-26-canvas执行15万粒子的动画.md
+++ b/08-26-canvas执行15万粒子的动画.md
@@ -1,4 +1,4 @@
-最近做的一个小项目，目的是通过粒子动画渲染图片
+最近遇到的，目的是通过粒子动画渲染图片
 
 图片大小为500*300，并且粒子动画细度为1，也就是粒子总量为15万，并且当动画完成后，图片能完整清晰的显示出来
 
@@ -27,12 +27,14 @@
   }
 ```
 
-后来考虑离屏吧，规定每个离屏承载量为2000(保证fps)，这么一来，75个离屏canvas，开始动画...奔溃了...
+----------
+
+后来考虑离屏吧，规定每个离屏承载量为1000(保证fps)，这么一来，75个离屏canvas，开始动画...奔溃了...
 
 ```js
 export default function createAssignParticles(allParticles){
   // 定义每个离屏承载量
-  const eachPanelParticles=2000
+  const eachPanelParticles=1000
   const assignedParticles=[]
   const panelsSize=Math.ceil(allParticles.length/eachPanelParticles)
   for(let i=0;i<panelsSize;i++){
@@ -77,11 +79,15 @@ for(let i=0;i<assignedParticles.length;i++){
 
 既然不能同时运动，那么就分批运动总行了吧
 
+----------
+
 每个离屏canvas执行完毕，递归调用下一个离屏canvas，但这样又出现一个新的问题，
 
 如果每个离屏执行后，清除显示用的画布，那么动画只是会出现每一个离屏的动画，上一个离屏动画的结果并未保存。
 
-如果不清除显示的画布，那么每个离屏动画会有轨迹，造成模糊。
+如果不清除显示的画布，那么每个离屏动画会有轨迹，造成模糊(虽然也挺好看，但不是需要的效果)。
+
+![](./img/带轨迹.png)
 ```js
 import raf from 'raf'
 import {spiral,fadeIn,explode} from './animations-control/core'
@@ -131,10 +137,7 @@ export default function play(assignedParticles,c_showMotion,ctx_showMotion,optio
 }
 ```
 
-
-
-
->效果图
+----------
 
 最后考虑用2张画布显示，第一个清除并且显示当前离屏动画，第二个用来保存第一个的结果
 
@@ -157,4 +160,9 @@ export default function play(assignedParticles,c_showMotion,ctx_showMotion,optio
   }
 }
 ```
->GIF
+
+最终效果如下：
+
+![](./img/spiral.gif)
+
+可以看到fps平均在45-50之间
