--- a/08-26-canvas执行15万粒子的动画.md
+++ b/08-26-canvas执行15万粒子的动画.md
@@ -29,7 +29,7 @@
 
 ----------
 
-后来考虑离屏吧，规定每个离屏承载量为1000(保证fps)，这么一来，75个离屏canvas，开始动画...奔溃了...
+后来考虑离屏吧，规定每个离屏承载量为1000(保证fps)，这么一来，75个`离屏canvas`，开始动画...奔溃了...
 
 ```js
 export default function createAssignParticles(allParticles){
@@ -81,11 +81,11 @@ for(let i=0;i<assignedParticles.length;i++){
 
 ----------
 
-每个离屏canvas执行完毕，递归调用下一个离屏canvas，但这样又出现一个新的问题，
+每个`离屏canvas`执行完毕，递归调用下一个`离屏canvas`，但这样又出现一个新的问题，
 
-如果每个离屏执行后，清除显示用的画布，那么动画只是会出现每一个离屏的动画，上一个离屏动画的结果并未保存。
+如果每个`离屏canvas`执行后，清除显示用的画布，那么动画只是会出现每一个离屏的动画，上一个离屏动画的结果并未保存。
 
-如果不清除显示的画布，那么每个离屏动画会有轨迹，造成模糊(虽然也挺好看，但不是需要的效果)。
+如果不清除显示的画布，那么每个`离屏canvas`会有轨迹，造成模糊(虽然也挺好看，但不是需要的效果)。
 
 ![](./img/带轨迹.png)
 ```js
@@ -139,7 +139,7 @@ export default function play(assignedParticles,c_showMotion,ctx_showMotion,optio
 
 ----------
 
-最后考虑用2张画布显示，第一个清除并且显示当前离屏动画，第二个用来保存第一个的结果
+最后考虑用2张画布显示，第一个清除并且显示当前`离屏canvas`，第二个用来保存第一个的结果
 
 ```
       /* 省略：前面参数多了一个ctx_storeStatus，其他一致 */
@@ -166,3 +166,9 @@ export default function play(assignedParticles,c_showMotion,ctx_showMotion,optio
 ![](./img/spiral.gif)
 
 可以看到fps平均在45-50之间
+
+-------
+
+总结：
+
+充分利用canvas的画布，将对粒子进行`fill`的动画转换成对`离屏canvas`进行`drawImage`的处理
