对内容进行一些格式调整

--- a/06-22-一些被忽略的js知识1.md
+++ b/06-22-一些被忽略的js知识1.md
@@ -1,4 +1,4 @@
-## 硬绑定不会覆盖硬绑定，但new会覆盖硬绑定
+#### 硬绑定不会覆盖硬绑定，但new会覆盖硬绑定
 
 * 硬绑定不会覆盖硬绑定
 ```js
@@ -36,13 +36,13 @@ obj2=new show(10)
 obj2.a  // 10
 ```
 
-## 安全的this
+#### 安全的this
 
 如果不需要绑定this，一般会使用null，但这是不安全的，一旦再次使用this，绑定null会让我们绑定到默认(window)；
 
 推荐使用`Object.create(null)`
 
-## 软绑定
+#### 软绑定
 
 `someMethod.softBind(obj)`
 
