--- a/06-24-一些被忽略的js知识2.md
+++ b/06-24-一些被忽略的js知识2.md
@@ -1,4 +1,4 @@
-## Object对象的key
+#### Object对象的key
 
 一般来说，obj的key属性会自动转换成字符串（调用默认toString方法），然后再读取
 
@@ -43,7 +43,7 @@ myObject[a]; // 1
 myObject[b]; // 2
 ```
 
-## 一些限制对象的方法
+#### 一些限制对象的方法
 
 * 限制扩展 `Object.preventExtensions`
 
