--- a/06-26-一些被忽略的js知识3.md
+++ b/06-26-一些被忽略的js知识3.md
@@ -1,4 +1,4 @@
-## for...of
+#### for...of
 
  `for..of`会寻找内置或者自定义的 @@iterator 对象并调用它的 next() 方法来遍历数据值
  
@@ -41,13 +41,13 @@ for(let key of obj){console.log(key)}
 // 3
 ```
 
-## for...in和in
+#### for...in和in
 
 `for(let key in obj){...}`查找的属性必须是可枚举的，在整个原型链上查找
 
 `key in obj`查找的属性可以不是可枚举的，在整个原型链上查找
 
-## 原型链继承
+#### 原型链继承
 
 ```
 // ES6 之前需要抛弃默认的 Bar.prototype
@@ -55,7 +55,7 @@ Bar.ptototype = Object.create( Foo.prototype );
 // ES6 开始可以直接修改现有的 Bar.prototype
 Object.setPrototypeOf( Bar.prototype, Foo.prototype );
 ```
-## setPrototypeOf,getPrototypeOf,isPrototypeOf
+#### setPrototypeOf,getPrototypeOf,isPrototypeOf
 
 ```js
 var a={x:1}
@@ -76,7 +76,7 @@ b.isPrototypeOf(a) // true
 * */
 ```
 
-## class的prototype
+#### class的prototype
 
 先不用class
 ```js
