--- a/18-07-09一些被忽略的JS知识4.md
+++ b/18-07-09一些被忽略的JS知识4.md
@@ -1,4 +1,5 @@
-## 按值传递和按引用传递
+一些JS基础(4)
+#### 按值传递和按引用传递
 
 按值传递的例子：
 ```js
@@ -26,7 +27,7 @@ a   // 999
 b   // 999
 ```
 
-## JSON.stringify()
+#### JSON.stringify()
 
 支持转换安全的JSON结构
 
