--- a/18-10-29-React v16.7新功能提议：Hooks(1).md
+++ b/18-10-29-React v16.7新功能提议：Hooks(1).md
@@ -30,7 +30,7 @@
 
 * useEffect:
 
-正常函数写法的注意都是挂载在render，使用副作用操作会有一些意外bug发生。
+函数式组件主体都是挂载在render，使用副作用操作会有一些意外bug发生。
 
 但可以在useEffect内部执行，这个钩子在render之后才执行。
 
