--- a/2018年/10月/18-10-02-获取数组中和为某个值的组合数量的算法.md
+++ b/2018年/10月/18-10-02-获取数组中和为某个值的组合数量的算法.md
@@ -1,5 +1,7 @@
 记录一个算法，要求获取数组中的和为`sum`的组合的数量
 
+* 不要求连续
+
 例如`arr=[1,2,3,4,5]`，那么和为5的组合数量为3，分别是`2,3`，`1,4`，`5`
 
 ```js
@@ -28,3 +30,21 @@ aux[2] = aux[2] +aux[1]
 aux[3] = aux[3] +aux[2]
 ```
 ==>`aux[3] = aux[3] +aux[2] +aux[1] +aux[0]`
+
+* 要求连续
+
+例如`arr=[1,2,3,4,5]`，那么和为5的组合数量为2，分别是`2,3`，`5`
+
+```js
+function calcSumCount(arr,target){
+  let prefix={},curSum=0,result=0
+  for(let i=0;i<arr.length;i++){
+    curSum+=arr[i]
+    result+=prefix[curSum-target] || 0
+    if(!prefix[curSum])prefix[curSum]=1
+    else prefix[curSum]++
+  }
+  return result
+}
+```
+
