add some example in MYSQL

--- a/2018年/9月/18-09-04-MYSQL常用命令记录.md
+++ b/2018年/9月/18-09-04-MYSQL常用命令记录.md
@@ -1,3 +1,7 @@
+* 给表添加别名(M是movies的别名,T是title的输出名)
+
+`SELECT title as T  FROM movies M;`
+
 * 添加row
 
 `INSERT  INTO library VALUES (1,'javascript',8);`
@@ -50,6 +54,19 @@ JOIN hobbies
 WHERE persons.name='Bobby McBobbyFace'
 AND persons.id=hobbies.person_id;
 ```
+
+* not in(A.id不存在于B.CustomerId中的数据)
+```
+SELECT Name from Customers A
+WHERE A.Id NOT IN (SELECT B.CustomerId from Orders B)
+```
+
+* not exist
+```
+SELECT A.Name from Customers A
+WHERE NOT EXISTS (SELECT 1 FROM Orders B WHERE A.Id = B.CustomerId)
+```
+
 * left out join...on合并表并且左边全部合并显示
 ```
 SELECT customers.name, customers.email, SUM(orders.price) AS total_price
