--- a/2018年/10月/18-10-31-React v16.7 Hooks(2).md
+++ b/2018年/10月/18-10-31-React v16.7 Hooks(2).md
@@ -1,3 +1,7 @@
+`useCallback, useMemo, useRef, useImperativeMethods, useMutationEffect, useLayoutEffect`
+
+------
+
 * useCallback
 
 * useMemo
@@ -57,6 +61,6 @@ FancyInput = forwardRef(FancyInput);
 
 * useLayoutEffect
 
-相当于`useEffect`在React执行DOM更新结束的会后同步调用。
+相当于`useEffect`在React执行DOM更新结束的时候同步调用。
 
 有点像`componentDidUpdate`
