--- a/2018年/6月/18-06-10-React.Children.md
+++ b/2018年/6月/18-06-10-React.Children.md
@@ -7,6 +7,14 @@ this.props.children:
 4. text元素   => text(字符串)
 5. 注释       => undefined
 
+11-21补充：
+
+`this.props.children`很重要的一点是，当组件更新时，并不会重复渲染。
+
+搭配`React.createContext`能达到只渲染`context`改变的组件，类似`react-redux`的效果。
+
+参考自：[避免React Context导致的重复渲染](https://zhuanlan.zhihu.com/p/50336226)
+
 React.Children:
 
 一个方法集合
