--- a/2018年/11月/18-11-26-图解Http大纲笔记(2).md
+++ b/2018年/11月/18-11-26-图解Http大纲笔记(2).md
@@ -52,7 +52,7 @@ HTTP 的不足
 
 SSL采用`公钥`和`私钥`
 
-HTTPS 采用混合加密机制
+HTTPS 采用混合加密机制(SSL+HTTP)
 
 机制前提：公开密钥加密与共享密钥加密相比，其处理速度要慢
 
@@ -127,5 +127,23 @@ HTTPS 的安全通信机制
 
 12. 最后由客户端断开连接。断开连接时，发送 close_notify 报文。
 
+-----
 
+BASIC认证
 
+明文发送账号密码，非常不安全。
+
+DIGEST认证
+
+发送通过`质询码`计算生成的`响应码`验证。
+
+SSL 客户端认证
+
+通过客户端证书(内含公钥)进行SSL安全认证
+
+* 证书认证(例如验证网银证书，确认客户端)
+
+* 基于表单认证(例如登录表单，输入网银密码，确认本人操作)
+    
+    * 基于`cookie`保存上一次验证信息，判断是否本人操作
+    
