fix ./img to ../../img

--- a/2018年/7月/18-07-15-2个JS缓存工具学习心得.md
+++ b/2018年/7月/18-07-15-2个JS缓存工具学习心得.md
@@ -3,7 +3,7 @@
 首先，这2个工具的实现源码是极其相似的，基本上，只要阅读了其中一个源码，也就了解了另外一个的实现。
 
 fast-memoize导图：
-![](./img/fast-memoize.png)
+![](../../img/fast-memoize.png)
 
 大概说说它们的实现思路：
 
