--- a/2018年/8月/18-08-26-canvas执行15万粒子的动画.md
+++ b/2018年/8月/18-08-26-canvas执行15万粒子的动画.md
@@ -87,7 +87,7 @@ for(let i=0;i<assignedParticles.length;i++){
 
 如果不清除显示的画布，那么每个`离屏canvas`会有轨迹，造成模糊(虽然也挺好看，但不是需要的效果)。
 
-![](./img/带轨迹.png)
+![](../../img/带轨迹.png)
 ```js
 import raf from 'raf'
 import {spiral,fadeIn,explode} from './animations-control/core'
@@ -163,7 +163,7 @@ export default function play(assignedParticles,c_showMotion,ctx_showMotion,optio
 
 最终效果如下：
 
-![](./img/spiral.gif)
+![](../../img/spiral.gif)
 
 可以看到fps平均在45-50之间
 
