--- a/2018年/9月/18-09-20-从零开始构建babel插件.md
+++ b/2018年/9月/18-09-20-从零开始构建babel插件.md
@@ -64,7 +64,7 @@ var b = arguments.length > 1 && arguments[1] !== undefined ? arguments[1] : 3;
 
 其中一条`var a=...`的`AST`如下，具体可以这里尝试，[https://astexplorer.net/](https://astexplorer.net/)
 
-![./img/AST-sample.png](./img/AST-sample.png)
+![./img/AST-sample.png](../../img/AST-sample.png)
 
 并将其插入到当前的`BlockStatement(大括号作用域内)`
 
