--- a/2018年/10月/18-10-02-获取数组中和为某个值的组合数量的算法.md
+++ b/2018年/10月/18-10-02-获取数组中和为某个值的组合数量的算法.md
@@ -1,8 +1,8 @@
 记录一个算法，要求获取数组中的和为`sum`的组合的数量
 
-* 不要求连续
+* 不要求连续，不要求重复
 
-例如`arr=[1,2,3,4,5]`，那么和为5的组合数量为3，分别是`2,3`，`1,4`，`5`
+例如`arr=[1,2,3,4,5]`，那么和为5的组合数量为3，分别是`2,3`、`1,4`、`5`
 
 ```js
 function computeSubset(arr,sum){
@@ -31,9 +31,31 @@ aux[3] = aux[3] +aux[2]
 ```
 ==>`aux[3] = aux[3] +aux[2] +aux[1] +aux[0]`
 
-* 要求连续
+--------
 
-例如`arr=[1,2,3,4,5]`，那么和为5的组合数量为2，分别是`2,3`，`5`
+* 不要求连续，要求重复
+
+例如：`arr=[1,2,5]`，那么和为5的组合为4，分别是`1,1,1,1,1`、`1,1,1,2`、`2,2,1`、`5`
+
+```js
+var change = function(arr,sum) {
+  let aux=Array(sum+1).fill(0)
+  aux[0]=1
+  for(let n of arr){
+    // 上一题这里是逆序，这里是顺序
+    for(let i=n;i<aux.length;i++){
+      aux[i]+=aux[i-n]
+    }
+  }
+  return aux[sum]
+};
+```
+
+-----
+
+* 要求连续，不要求重复
+
+例如`arr=[1,2,3,4,5]`，那么和为5的组合数量为2，分别是`2,3`、`5`
 
 ```js
 function calcSumCount(arr,target){
