--- a/2018年/12月/18-12-08-前端日常笔记.md
+++ b/2018年/12月/18-12-08-前端日常笔记.md
@@ -1,3 +1,5 @@
+内容包括：`tag 模板字符串`，`Labelled statements`，`React服务端渲染使用stream`，`jest.fn`，`jest.mock`
+
 ### tag 模板字符串
 
 以`${xx}`分割字符串，分别传入2个数组，第一个是`分割后的结果`，第二个是`分割的变量`
@@ -97,3 +99,37 @@ const server = http.createServer(function (req, res) {
 
 server.listen(8000)
 ```
+
+-----
+
+### jest.fn
+
+
+模拟一个函数，参数是`(函数的行为)`
+
+`const mockFn=jest.fn(()=>55)`
+
+可以通过
+
+* `expect(mockFn).toHaveBeenCalled()` 验证是否被调用
+* `expect(mockFn).toHaveBeenCalledTimes(num)`验证是否被调用num次
+* `expect(mockFn).toHaveBeenCalledWith(arg1,arg2)`验证是否存在被调用的参数
+* `expect(mockFn).toHaveBeenLastCalledWith(arg1,arg2)`验证最后一次被调用的参数
+* `expect(mockFn).toHaveBeenNthCalledWith(Nth,arg1,arg2)`验证第Nth次被调用的参数
+* `expect(mockFn).toHaveBeenNthCalledWith(arg1,arg2)`验证最后一次被调用的参数
+* `mockFn.mock.call`查看函数被调用的数组
+
+-----
+
+### jest.mock
+模拟一个模块，参数分别是`(模块路径,模块的行为,模块是否虚拟的)`
+
+例如：一个项目不存在`../abc.js`这个模块
+
+```
+jest.mock('../abc.js',() => {
+  return jest.fn(() => 42);
+},{virtual:true})
+```
+
+第三个参数表示这个模块实际不存在
