--- a/2018年/12月/18-12-10-红黑树要点-根据《算法第4版》.md
+++ b/2018年/12月/18-12-10-红黑树要点-根据《算法第4版》.md
@@ -12,6 +12,8 @@
 
 ### 插入：
 
+![](../../img/红黑树-插入节点.png)
+
 ```js
 function insert(){
   // ...正常二叉树的处理
@@ -22,6 +24,9 @@ function insert(){
   if(isRed(node.left) && isRed(node.left.left))node=rotateRight(node)
 }
 ```
+
+![](../../img/红黑树-插入基本操作.png)
+
 例(B代表`black`, R代表`red`)：
 
 ```
@@ -33,11 +38,16 @@ function insert(){
                       R4               R3                                           
 ```
 
+
+
 -----
 
 ### 删除：
 
 #### 左节点
+
+![](../../img/红黑树-删除(左节点).png)
+
 ```js
 if (val < node.val)  {
   // 检测左节点如果是2节点(黑色)，那么需要将它变为3节点(红色)再删除
@@ -77,6 +87,8 @@ function moveRedLeft(node) {
 -----
 
 #### 右节点
+
+![](../../img/红黑树-删除(右节点).png)
 
 ```js
 if (val < node.val)  {
