--- a/2018年/12月/18-12-10-红黑树要点-根据《算法第4版》.md
+++ b/2018年/12月/18-12-10-红黑树要点-根据《算法第4版》.md
@@ -1,8 +1,8 @@
 
 ### 规则：
 1. 原型是`2-3树`
-2. 红链接：红链接中子节点是`红色`，父节点是`黑色`
-3. 只存在红链接为左链接
+2. 红链接：相当于`2-3树`的`3节点`，红链接中子节点是`红色`，父节点是`黑色`
+3. 只存在红链接为左链接，发现红链接为右链接需要转换
 4. 当节点为null，也认为是`黑色`
 5. 当插入节点，出现2个左红点相邻(不可能出现2个右红点相邻，因为第3条)，其实就是`2-3树`中出现了`4节点`，需要转换。
 6. 当删除节点，需要让被删除的节点为`红色`(通过转换)
