--- a/2018年/7月/18-07-10-js宽松比较规范.md
+++ b/2018年/7月/18-07-10-js宽松比较规范.md
@@ -39,3 +39,6 @@
     [42] == 42;  // true
     [] == "";    // true
     ```
+    `ToPromitive`：尝试转换为原始值
+    
+    比较规则：先使用`valueOf`，如果不是原始值，则使用`toString`，如果还不是，则抛出错误。
