--- a/2018年/10月/18-10-02-获取数组中和为某个值的组合数量的算法.md
+++ b/2018年/10月/18-10-02-获取数组中和为某个值的组合数量的算法.md
@@ -59,14 +59,14 @@ var change = function(arr,sum) {
 
 ```js
 function calcSumCount(arr,target){
-  let prefix={},curSum=0,result=0
+  let prefix=[1],curSum=0,result=0
   for(let i=0;i<arr.length;i++){
     curSum+=arr[i]
-    result+=prefix[curSum-target] || 0
+    if(curSum>=target)result+=prefix[curSum-target] || 0
     if(!prefix[curSum])prefix[curSum]=1
     else prefix[curSum]++
   }
-  return result
+return result
 }
 ```
 
