--- a/2018年/10月/18-10-02-获取数组中和为某个值的组合数量的算法.md
+++ b/2018年/10月/18-10-02-获取数组中和为某个值的组合数量的算法.md
@@ -57,6 +57,7 @@ var change = function(arr,sum) {
 
 例如`arr=[1,2,3,4,5]`，那么和为5的组合数量为2，分别是`2,3`、`5`
 
+写法一：
 ```js
 function calcSumCount(arr,target){
   let prefix=[1],curSum=0,result=0
@@ -70,3 +71,19 @@ return result
 }
 ```
 
+写法二：`windowSlide`
+
+```js
+function windowSlideSum(arr,target){
+  let sum=0,result=0
+  let head=0
+  for(let i=0;i<arr.length;i++){
+    sum+=arr[i]
+    while(sum>=target && head<=i){
+      if(sum===target)result++
+      sum-=arr[head++]
+    }
+  }
+  return result
+}
+```
