--- a/2018年/9月/18-09-11-二分查找的range方法.md
+++ b/2018年/9月/18-09-11-二分查找的range方法.md
@@ -6,7 +6,9 @@
 
 例如：`[6,3,8,1,4,7]`，找出第3位，结果是4
 
-使用排序也可以解决，当空间有限制时，时间复杂度是`O(N*lgN)`，但二分查找的范围法可以控制到`O(N)`
+使用排序也可以解决，当空间有限制时，时间复杂度是`O(N*lgN)`，~~但二分查找的范围法可以控制到~~`O(N)`，二分也是`O(nlgn)`
+
+使用`快速选择`能达到`O(n)`，最坏`O(n^2)`，具体代码在`2019-1-18`
 
 思路是不断缩小查找范围直到范围长度为1，这时所在的位置就是对应的位数
 ```js
