--- a/2019年/1月/19-01-20-Leetcode-927-三等分.md
+++ b/2019年/1月/19-01-20-Leetcode-927-三等分.md
@@ -22,7 +22,7 @@ var threeEqualParts = function(A) {
   // 1的数量不是3的倍数，返回impossible
   if (S % 3 != 0) return IMP;
   let T = S / 3;
-  // 不存在1，返回impossible
+  // 不存在1，返回[头,尾]
   if (T == 0) return [0, N - 1];
 
   // 通过上面确定了，每一个字符串中的1的数量必须为T
