--- a/2019年/2月/19-02-11-Leetcode-782-棋盘转换.md
+++ b/2019年/2月/19-02-11-Leetcode-782-棋盘转换.md
@@ -11,12 +11,14 @@
 
 思路：
 
-1. 能转换为棋盘的矩阵符合2个特征：
+1. 能转换为棋盘的矩阵符合3个特征：
     1. 抽取某一行(列)，其他行(列)一定与这一行相同或者相反。
     
         例如某一行为`11001`，那么其他行只可能是`11001`或者`00110`。
     
     2. 每一行中`1`和`0`的数量必须不小于`Math.floor(N/2)`。
+    
+    3. 两种行类型的数量相差不能超过1。
 
     例如这行`100010`，是不符合规则的直接返回`-1`。
 
@@ -29,6 +31,7 @@
     
     由于上面的`rowMove`是整行检查，而一行中每次交换是交换2列，因此最终结果`/2`。
     
+-----
 代码：
 ```js
 var movesToChessboard = function(board) {
