--- a/2019年/3月/19-03-16-Leetcode-918-环形子数组的最大和.md
+++ b/2019年/3月/19-03-16-Leetcode-918-环形子数组的最大和.md
@@ -85,3 +85,31 @@ var maxSubarraySumCircular = function(A) {
 
 因此我们只需比较`最大和的子数组`和`数组总和-最小和的子数组`。
 
+代码：
+```js
+/**
+ * @param {number[]} A
+ * @return {number}
+ */
+var maxSubarraySumCircular = function(A) {
+  let total = 0, 
+      maxSum = -Infinity, curMax = 0, 
+      minSum = Infinity, curMin = 0,
+      maxSingle=-Infinity
+  for (let a of A) {
+    total += a;
+    maxSingle=Math.max(maxSingle,a)
+    
+    if(curMax+a>0){
+      curMax+=a
+      maxSum=Math.max(curMax,maxSum)
+    }else curMax=0
+
+    if(curMin+a<0){
+      curMin+=a
+      minSum=Math.min(curMin,minSum)
+    }else curMin=0   
+  }
+  return maxSum > 0 ? Math.max(maxSum, total - minSum) : maxSingle;
+};
+```
