--- a/2018年/7月/18-07-29-记一道二分查找算法题.md
+++ b/2018年/7月/18-07-29-记一道二分查找算法题.md
@@ -1,6 +1,6 @@
 题目位置：https://leetcode.com/problems/nth-magical-number/description/
 
-题目：
+##### 题目：
 
 如果正整数 可被A  或B整除，则它是神奇的。
 
@@ -26,8 +26,10 @@
 输入： N = 3，A = 6，B = 4
 输出：8
 ```
+
 ----------
-要点；
+
+##### 要点；
 1. 如果知道在N次内，a出现的次数i，b出现的次数j，那么就可以通过Math.max(a*i,b*j)求出结果
     ```
     例如: N为5, a为3, b为4
@@ -41,8 +43,11 @@
     ```
 
 3. 假设某个数x，a出现的次数是Math.floor(x/a)，b出现的次数是Math.floor(x/b)，最小公倍数出现的次数是Math.floor(x/lcm)，因此我们要找出这个数，使得i+j-k===N
+
+
 ----------------------
-* 最大公约数 Lowest Common Multiple
+
+##### 最大公约数 Lowest Common Multiple
 ```js
 function GCD(a,b){
     while(a % b!==0){
@@ -54,14 +59,16 @@ function GCD(a,b){
 }
 ```
 
-* 最小公倍数 greatest common divisor
+##### 最小公倍数 greatest common divisor
+
 ```js
 function LCM(a,b){
     return a*b/GCD(a,b)
 }
 ```
 --------
-* 完整代码
+
+##### 完整代码
 ```js
 /**
  * @param {number} N
