--- a/2018年/7月/18-07-30-文章记录—当前的网页安全.md
+++ b/2018年/7月/18-07-30-文章记录—当前的网页安全.md
@@ -1,4 +1,4 @@
-原文地址：https://hackernoon.com/im-harvesting-credit-card-numbers-and-passwords-from-your-site-here-s-how-9a8cb347c5b5
+> 原文地址：https://hackernoon.com/im-harvesting-credit-card-numbers-and-passwords-from-your-site-here-s-how-9a8cb347c5b5
 
 作者讲述了一些能够达成的破解网络安全手段(有些已被认为是bug修复，例如2)，并给出建议
 
