--- a/2021年/8月/21-08-09-配置Larvael8问题记录.md
+++ b/2021年/8月/21-08-09-配置Larvael8问题记录.md
@@ -35,13 +35,16 @@
 
 > FATAL ERROR: CALL_AND_RETRY_LAST Allocation failed - JavaScript heap out of memory
 
+通过更新最新版本`node`解决，也可以通过命令行`node --max-old-space-size=4096`
 
-### 问题5(pull失败)
+后面的数字`4096`(MB)代表定义分配的内存
+
+### 问题5(git pull失败)
 
 >fatal: refusing to merge unrelated histories
 
 
-`git pull --allow-unrelated-histories`
+当进行`pull`时，出现远程git历史和本地git历史对应不上的问题，`git pull --allow-unrelated-histories`
 
 
 ### 问题6(node-sass构建失败)
